fixed small download spacing and also double named project

--- a/src/components/project-content-small.module.scss
+++ b/src/components/project-content-small.module.scss
@@ -139,3 +139,7 @@ flex: 1 1 auto;
 padding: 1rem;
 text-align: center;
 }
+
+.download {
+  margin: 1rem;
+}
